omweather (0.24.2) unstable; urgency=low

  * Various minor fixes

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 28 Aug 2009 19:40:10 +0200

omweather (0.24) unstable; urgency=low

  * Updated German, Finish, Spanish, Russian translations
  * Done automatically download the weather forecast after adding of a station, if device is connected to Internet
  * Fixed a problem with gps station choosing
  * Small fixes in popup windows
  * Changed in postinstall script
  * Changed parameter 'type of connection for automatically downloading' by default is WLAN only
  * Changed parameter 'Swap temperature' by default is TRUE
  * Added 'hd_home_plugin_item_set_settings' to widget
  * Various minor fixes

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 20 Aug 2009 19:40:10 +0200

omweather (0.23.4) unstable; urgency=low

  * Fixed the crashing after update deb package

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 11 Aug 2009 18:30:00 +0200

omweather (0.23.3) unstable; urgency=low

  * Modified acknowledgment and copyright lists
  * Various small fixes
  * Fixed memory leaks
  * Corrected behaviour of details weather forecasts for a current day

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 11 Aug 2009 18:30:00 +0200

omweather (0.23.2) unstable; urgency=low

  * Fixed problem with switching between stations if stations list has nil stations
  * Fixed problem with detailed weather for current day
  * Now next station changing in inside popup window without destroying it
  * Fixed problem with scrolling in popup window
  * Done feature request from Daniel Wilms "automatically connect to gps service after selecting of gps station"

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 07 Jun 2009 18:30:00 +0200

omweather (0.23.1) unstable; urgency=low

  * Fixed problem with on/off GSM or WLAN downloading for current connection
  * Done scroll to child for pannable_area in window popup
  * Added button 'Clear' for window 'Configuring station'
  * Removed 'Expanded/Collapsed' togglebuttons in status window
