@@ -1,6 +1,7 @@
 omweather (0.24.2) unstable; urgency=low
 
   * Various minor fixes
+  * Fixed bug #4971 ""Wrong station code or ZIP code!!" warning when  installing"
 
  -- Vlad Vasiliev <vlad@gas.by>  Thu, 28 Aug 2009 19:40:10 +0200
 
